--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,8 @@ html {
   width: 100vw;
   height: 100vh;
   background-image: url(textures/p1.jpg);
-  background-size: cover;
+  background-size: 100% auto;
+  background-repeat: no-repeat;
 }
 
 #loading > div {
