--- a/styles.css
+++ b/styles.css
@@ -38,34 +38,23 @@ h2 {
   display: none;
 }
 
-.loader {
-  margin: auto;
-  width: 50%;
-  height: 50%;
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
+.load-message {
+  padding: 30px 0px;
 }
 
 @keyframes spin {
   0% {
-    transform: rotate(0deg);
+    transform: translateY(0px);
+    transform: translateX(1px);
+  }
+  50% {
+    transform: translateY(4px);
   }
   100% {
-    transform: rotate(360deg);
+    transform: translateY(0px);
   }
 }
 
-#loadingMessage {
-  position: absolute;
-  top: 20%;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  z-index: 100;
-  color: rgb(8, 22, 224);
-  transform: translateZ(0);
+.load-message {
+  animation: spin 0.5s ease-in-out infinite;
 }
